<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="196dp"
        android:layout_height="27dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="44dp"
        android:text="@string/txt_Prontos_da_funcao"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView_fx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/textView_função_spline"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_x" />

    <TextView
        android:id="@+id/TextView_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="108dp"
        android:text="@string/textView_x_spline"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_x0_spline"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/edittext_hint_x0_spline"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/TextView_x"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editText_fx0_spline"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/edittext_hint_fx0_spline"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/TextView_fx"
        app:layout_constraintTop_toBottomOf="@+id/editText_x0_spline" />

    <EditText
        android:id="@+id/editText_x2_spline"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/edittext_hint_x2_spline"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/editText_x1_spline"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editText_fx2_spline"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/edittext_hint_fx2_spline"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/editText_fx1_spline"
        app:layout_constraintTop_toBottomOf="@+id/editText_x2_spline" />

    <EditText
        android:id="@+id/editText_x1_spline"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/edittext_hint_x1_spline"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/editText_x0_spline"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editText_fx1_spline"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/edittext_hint_fx1_spline"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/editText_fx0_spline"
        app:layout_constraintTop_toBottomOf="@+id/editText_x1_spline" />

    <EditText
        android:id="@+id/editText_x3_spline"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/edittext_hint_x3_spline"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/editText_x2_spline"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editText_fx3_spline"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/edittext_hint_fx3_spline"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/editText_fx2_spline"
        app:layout_constraintTop_toBottomOf="@+id/editText_x3_spline" />

    <EditText
        android:id="@+id/editText_x4_spline"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/edittext_hint_x4_spline"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/editText_x3_spline"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editText_fx4_spline"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/edittext_hint_fx4_spline"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/editText_fx3_spline"
        app:layout_constraintTop_toBottomOf="@+id/editText_x4_spline" />

    <Button
        android:id="@+id/btn_help_spline"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_calcular_spline"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginBottom="102dp"
        android:text="@string/btn_BuscarEquacoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>