<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="344dp"
        android:layout_height="551dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descricao"
                android:textStyle="bold"
                android:textSize="25sp"
                android:paddingLeft="8dp"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="387dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_help_secante1"
                android:textAlignment="gravity"
                android:paddingLeft="8dp"
                android:paddingBottom="12dp"
                app:layout_constraintStart_toStartOf="@+id/scrollView3"
                app:layout_constraintTop_toTopOf="@+id/scrollView3" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/parametros"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="349dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingBottom="12dp"
                android:text="@string/str_help_secante2"
                android:textAlignment="gravity"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="378dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="151dp"
                android:alpha="1.0"
                android:paddingBottom="12dp"
                app:srcCompat="@drawable/secante" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/str_help_secante3"
                tools:layout_editor_absoluteX="136dp"
                tools:layout_editor_absoluteY="302dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>